// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`float negative 1`] = `
.c0 {
  white-space: nowrap;
}

<span
  class="c0"
>
  -10
</span>
`;

exports[`float null 1`] = `
.c0 {
  white-space: nowrap;
}

<span
  class="c0"
>
  н/д
</span>
`;

exports[`float positive 1`] = `
.c0 {
  white-space: nowrap;
}

<span
  class="c0"
>
  10
</span>
`;

exports[`float too high 1`] = `
.c0 {
  white-space: nowrap;
}

<span
  class="c0"
>
  10
  <sup>
    6
  </sup>
</span>
`;

exports[`float too low 1`] = `
.c0 {
  white-space: nowrap;
}

<span
  class="c0"
>
  &lt; 0,01
</span>
`;

exports[`float too low negative 1`] = `
.c0 {
  white-space: nowrap;
}

<span
  class="c0"
>
  &lt; 0,01
</span>
`;

exports[`float undefined 1`] = `
.c0 {
  white-space: nowrap;
}

<span
  class="c0"
>
  н/д
</span>
`;

exports[`int negative 1`] = `
.c0 {
  white-space: nowrap;
}

<span
  class="c0"
>
  -10
</span>
`;

exports[`int null 1`] = `
.c0 {
  white-space: nowrap;
}

<span
  class="c0"
>
  н/д
</span>
`;

exports[`int positive 1`] = `
.c0 {
  white-space: nowrap;
}

<span
  class="c0"
>
  10
</span>
`;

exports[`int too high 1`] = `
.c0 {
  white-space: nowrap;
}

<span
  class="c0"
>
  1 000 000
</span>
`;

exports[`int too high compress 1`] = `
.c0 {
  white-space: nowrap;
}

<span
  class="c0"
>
  1
   
  млн
</span>
`;

exports[`int too low 1`] = `
.c0 {
  white-space: nowrap;
}

<span
  class="c0"
>
  0
</span>
`;

exports[`int undefined 1`] = `
.c0 {
  white-space: nowrap;
}

<span
  class="c0"
>
  н/д
</span>
`;

exports[`percent negative 1`] = `
.c0 {
  white-space: nowrap;
}

<span
  class="c0"
>
  -10
   
  <span>
    %
  </span>
</span>
`;

exports[`percent null 1`] = `
.c0 {
  white-space: nowrap;
}

<span
  class="c0"
>
  н/д
</span>
`;

exports[`percent positive 1`] = `
.c0 {
  white-space: nowrap;
}

<span
  class="c0"
>
  10
   
  <span>
    %
  </span>
</span>
`;

exports[`percent too high 1`] = `
.c0 {
  white-space: nowrap;
}

<span
  class="c0"
>
  10
  <sup>
    6
  </sup>
   
  <span>
    %
  </span>
</span>
`;

exports[`percent too low 1`] = `
.c0 {
  white-space: nowrap;
}

<span
  class="c0"
>
  &lt; 0,01
   
  <span>
    %
  </span>
</span>
`;

exports[`percent undefined 1`] = `
.c0 {
  white-space: nowrap;
}

<span
  class="c0"
>
  н/д
</span>
`;
